--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,30 @@
 <div class="container">
 <!-- Brand and toggle get grouped for better mobile display -->
 <div class="navbar-header">
-  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse"  >
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse"  >
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
 
-      <%= link_to "SaaS", root_path ,class:" navbar-brand"
- %>
+<%= link_to "SaaS", root_path ,class:" navbar-brand"
+%>
 </div>
-    <div class="collapse navbar-collapse" id="main-nav-collapse">
+<div class="collapse navbar-collapse" id="main-nav-collapse">
 
 <ul class="nav navbar-nav navbar-right">
-  
-    <li><%= link_to "About", about_path %></li>
-    </ul>
+
+<li><%= link_to "About", about_path %></li>
+</ul>
 </div>
 </div>
 </nav>
-<%= yield %>
+
+<div class="container">
+  <%= yield %>
+  </div>
+
 
 </body>
 </html>
