--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-<h2>Home</h2>
+
+<div class="jumbotron text-center">
+<h1>
+    Welcome To Dev Match
+</h1>
+<h3>A membership site where entrepreneus can meet developers.</h3>
+</div>
+
+
+
+
